--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,6 +1,7 @@
 # remote_theme: pages-themes/dinky@v0.2.0
+theme: just-the-docs
 plugins:
-  - jekyll-remote-theme
+  # - jekyll-remote-theme
   - jekyll-feed
   - jekyll-sitemap
   - jekyll-seo-tag
