maybe this will display css?
github pages is the stupidest thing ever I dont want to have to push for every tiny fix.

--- a/docs/Gemfile
+++ b/docs/Gemfile
@@ -13,6 +13,7 @@ gem "fiddle"
 
 group :jekyll_plugins do
   gem "jekyll-sitemap"
+  gem "jekyll-sass-converter"
   gem "jekyll-feed"
   gem "jekyll-seo-tag"
 end
