--- a/docs/_data/navigation.yml
+++ b/docs/_data/navigation.yml
@@ -3,8 +3,12 @@
   link: /LAMAS/
 - name: About
   link: /LAMAS/about.html
-- name: Theory
-  link: /LAMAS/theory.html
+- name: Introduction
+  link: /LAMAS/intro.html
+- name: Theoretic approach
+  link: /LAMAS/approach.html
+- name: Implementation
+  link: /LAMAS/impl.html
 
 
 ## For local testing
@@ -12,5 +16,9 @@
 #   link: /
 # - name: About
 #   link: /about.html
-# - name: Theory
-#   link: /theory.html
+# - name: Introduction
+#   link: /intro.html
+# - name: Theoretical approach
+#   link: /approach.html
+# - name: Implementation
+#   link: /impl.html
