--- a/docs/_data/navigation.yml
+++ b/docs/_data/navigation.yml
@@ -2,10 +2,10 @@
 - name: Home
   link: /LAMAS/
 - name: About
-  link: /LAMAS/about.html
+  link: https://snooluna.github.io/LAMAS/about.html
 - name: Introduction
   link: /LAMAS/intro.html
-- name: Theoretic approach
+- name: Theoretical approach
   link: /LAMAS/approach.html
 - name: Implementation
   link: /LAMAS/impl.html
