--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -8,6 +8,10 @@ markdown: kramdown
 kramdown:
   math_engine: mathjax
 
+url: "https://snooluna.github.io"
+baseurl: "/LAMAS"
+
+
 defaults:
   - scope:
       path: ""
